--- a/work.html
+++ b/work.html
@@ -92,10 +92,10 @@
         </a>
       </div>
       <div class="item">
-        <a href="https://raw.githack.com/Shashank13021990/loancalculator/master/dist/index.html">
+        <a href="#!">
           <img src="img/projects/project4.jpg" alt="Project">
         </a>
-        <a href="#" class="btn-light">
+        <a href="https://raw.githack.com/Shashank13021990/loancalculator/master/dist/index.html" class="btn-light">
           <i class="fas fa-eye"></i> Loan Calculator
         </a>
         <a href="https://github.com/Shashank13021990/LoanCalculator" class="btn-dark">
